--- a/style.css
+++ b/style.css
@@ -18,14 +18,43 @@ ol.upper-roman{
     list-style-type: upper-roman;
 }
 
-/*/// Links ///*/
+.text-justified {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+/* Style links */
 a {
     color: lightskyblue;
-    text-decoration: none
+    text-decoration: none;
 }
 
 a:hover {
-    font-weight: bold;
+    /*font-weight: bold;*/
     text-decoration: underline;
     color: lightcoral;
+}
+
+/* Style the top navigation bar */
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+}
+
+/* Change color on hover */
+.topnav a:hover {
+    font-weight: 0;
+    background-color: #ddd;
+    color: black;
 }
