--- a/style.css
+++ b/style.css
@@ -23,6 +23,19 @@ ol.upper-roman{
     text-justify: inter-word;
 }
 
+.text-mediumseagreen {
+    color: mediumseagreen;
+}
+
+.text-lightskyblue {
+    color: lightskyblue;
+}
+
+/* To highlight the current page you're on in the navbar */
+.active {
+    text-decoration: underline;
+}
+
 /* Style links */
 a {
     color: lightskyblue;
@@ -30,7 +43,6 @@ a {
 }
 
 a:hover {
-    /*font-weight: bold;*/
     text-decoration: underline;
     color: lightcoral;
 }
@@ -39,6 +51,7 @@ a:hover {
 .topnav {
     overflow: hidden;
     background-color: #333;
+    border: 1px solid #e7e7e7
 }
 
 /* Style the topnav links */
@@ -48,8 +61,6 @@ a:hover {
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
-
 }
 
 /* Change color on hover */
